2009-06-26  Thomas Moulard  <thomas.moulard@gmail.com>

	Add optional function name.
	* include/roboptim/core/derivable-function.hh,
	* include/roboptim/core/function.hh,
	* include/roboptim/core/linear-function.hh,
	* include/roboptim/core/n-times-derivable-function.hh,
	* include/roboptim/core/quadratic-function.hh,
	* include/roboptim/core/twice-derivable-function.hh:
	Add optional function name.
	* include/roboptim/core/problem.hxx: Display function name.
	* src/constant-function.cc,
	* src/derivable-function.cc,
	* src/function.cc,
	* src/identity-function.cc,
	* src/linear-function.cc,
	* src/numeric-linear-function.cc,
	* src/numeric-quadratic-function.cc,
	* src/quadratic-function.cc,
	* src/twice-derivable-function.cc,
	* tests/finite-difference-gradient.cc,
	* tests/n-times-derivable-function.cc,
	Add function name.
	* tests/plugin.cc,
	* tests/visualization-gnuplot-function.cc,
	* tests/simple.cc: Add titles to function.
	* tests/plugin.stdout,
	* tests/simple.stdout: Regenerate.

2009-06-26  Thomas Moulard  <thomas.moulard@gmail.com>

	Remove Boost.Variant display function.
	* include/roboptim/core/util.hh,
	* include/roboptim/core/util.hxx:
	Remove code as this feature is already available
	in Boost.

2009-06-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Display constraints final state.
	* include/roboptim/core/result.hh: Add constraints vector
	to store constraints final values.
	* src/result.cc: Display constraints vector.
	* tests/result.stdout: Regenerate.

2009-06-23  Thomas Moulard  <thomas.moulard@gmail.com>

	Add support for mixed derivative.
	* include/roboptim/core/derivable-parametrized-function.hh:
	Add support for mixed derivative.
	* tests/derivable-parametrized-function.cc: Update test.

2009-06-23  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix distribution.
	* include/Makefile.am: Distribute missing header.
	* tests/Makefile.am: Fix typo.

2009-06-23  Thomas Moulard  <thomas.moulard@gmail.com>
